# posterr-api

./: Dockerfile  README.md  docker-compose.yml  posterr.postman_collection.json  pyproject.toml
config/: docker.yml  local.yml
posterr/: app.py
posterr/api/: __init__.py  handlers.py
posterr/api/handlers/: base.py  healthcheck.py  post.py  user.py
posterr/config/: __init__.py
posterr/services/: base.py  post.py  user.py
posterr/storages/: cache.py  database.py
posterr/storages/dao/: post.py  user.py
tests/: test_posterr.py
tests/end_to_end/: test_e2e_posts.py  test_e2e_user.py
tests/services/: test_base.py  test_post.py  test_user.py
tests/unit/services/: test_base.py  test_user.py
